# rust_jwt_authentication

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  test.json
.sqlx/: query-eff213232370eaf88545118a6eb292dc4b40c82511d1ebdcca617ff2fdcf2583.json
configurations/: base.yaml
migrations/: 20230806150652_create_user_table.up.sql
src/: lib.rs  main.rs
src/auth/: dto.rs  extractors.rs  handlers.rs  middleware.rs  mod.rs  models.rs  repositories.rs  utils.rs
src/auth/middlewares/: auth_middleware.rs  mod.rs  require_auth_middleware.rs
src/configurations/: app_configuration.rs
src/handlers/: healthcheck.rs  mod.rs
src/middlewares/: auth_middleware.rs
src/models/: dto_models.rs  mod.rs  user_models.rs
src/states/: db_state.rs
