[package]
name = "rust_jwt_authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.1"
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.177", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }

[lib]
name = "rust_jwt_authentication"
path = "src/lib.rs"
